Added chapter details

--- a/src/components/CourseChapter.css
+++ b/src/components/CourseChapter.css
@@ -1,14 +1,27 @@
 .coursechapter-container{
-    margin-top: 100px;
+    margin: 60px auto;
     width: 80%;
-    margin-left: 4%;
-    padding: 19px;
+    padding: 16px;
 }
 .cover-following {
-    border: 1px solid black;
-    width: 30%;
+    border: 1px solid #ddd;
+    width: 40%;
     box-shadow: antiquewhite;
     padding: 20px;
-    background-color: grey;
+    background-color: #fafafa;
     cursor: pointer;
+}
+
+.coursechapter-container p {
+    padding: 20px 0;
+}
+.coursechapter-container h2 {
+    margin-bottom: 15px;
+}
+.cover-following li {
+    padding: 6px 0;
+    margin-left: 20px;
+}
+.coursechapter-container li {
+    padding: 6px 0;
 }
